# PolyLingus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  wasm_bridge.rs
src/analysis/: entropy.rs  mod.rs  prompt_injection.rs  report.rs  unicode_scanner.rs
src/core/: mod.rs  pipeline.rs  registry.rs  transform.rs
src/decoder/: chain_decoder.rs  mod.rs  universal.rs
src/homoglyph/: confusables.rs  detector.rs  generator.rs  mod.rs
src/payload/: fragmenter.rs  mod.rs  randomizer.rs
src/semantic/: euphemisms.rs  fragmentation.rs  mod.rs  paraphrase.rs  register.rs  synonyms.rs
src/steganography/: image_stego.rs  mod.rs  scanner.rs  whitespace.rs  zero_width.rs
src/tokenizer/: boundary.rs  glitch_tokens.rs  mod.rs
src/transforms/: advanced_ciphers.rs  ciphers.rs  encodings.rs  formatting.rs  mod.rs  scripts.rs  unicode_styles.rs  visual.rs
tests/: e2e.rs
web/: index.html  style.css
web/js/: app.js
